Name changes are Done

--- a/src/app/panel/panel.component.html
+++ b/src/app/panel/panel.component.html
@@ -6,7 +6,7 @@
     </nav>
     <div class="side-menu">
        
-            <h2 style="color: white;">Anjali Sharma</h2>
+            <h2 style="color: white;">Jayesh Sutar</h2>
         <br> <a href="#"><i class="fa fa-user"></i><span>Customers</span></a>
          <a href="#"><i class="fa fa-envelope"></i><span>Message</span></a> 
          <a href="#"><i class="fa fa-shopping-basket"></i><span>Products</span></a> 
