this is the change done to add new components and also display loginpage first

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<app-panel></app-panel>
+  
+<!-- selector tag of the login Page for the Displaying the login page First -->
+
+<app-login></app-login>   
