--- a/src/app/analyst-table/analyst-table.component.html
+++ b/src/app/analyst-table/analyst-table.component.html
@@ -1,176 +1,40 @@
+<img src="https://c4.wallpaperflare.com/wallpaper/586/603/742/minimalism-4k-for-mac-desktop-wallpaper-preview.jpg" alt="">
 
+<br>
+<br>
 
+<form class="row row-cols-sm-auto">
+	<div class="col-12">
+		<div class="input-group">
+			<input
+				class="form-control"
+				placeholder="yyyy-mm-dd"
+				name="dp"
+				ngbDatepicker
+				[dayTemplate]="customDay"
+				#d="ngbDatepicker"
+			/>
+			<button class="btn btn-outline-secondary bi bi-calendar3" (click)="d.toggle()" type="button"> <i class="fa-calender"></i></button>
+		</div>
+	</div>
+</form>
 
-<div class="box-body">
-    <div class="row" style="padding: right 0;">
-      <div class="col-sm-6">
-        <div class="row">
-          <div class="col-sm-6" style="width: 43%;position:relative ;  padding:5;margin:0">
-           
-        </div>
-        <!-- (change)="getAllReceiptReportDetails($event.target.value)" -->
-        <div class="col-sm-6" id="inputField" style="width: 35%;position: relative; left: 25px ; padding:5;margin:0">
-        
-      </div>
-        </div>
-      </div>
-          <div class="col-sm-6 align-div">
-            <div id="example1_filter" class="dataTables_filter">
-              <input
-                type="text"
-                class="searchBox"
-                placeholder="Search ..."
-              
-              />
-              <button class="btn addbutton" id="searchButton" type="button">
-                <i class="fa fa-search fa-lg"></i>
-              </button>
-      
-              <button
-                type="button"
-                class="btn addbutton  add-new"
-                style="margin: 1rem;"
-              
-              >
-                <i class="fa fa-plus"></i> Export
-              </button>
-              <button
-                type="button"
-               
-                #popupButton
-                class="display-none"
-                data-toggle="modal"
-                data-backdrop="static"
-                data-target="#modal-class"
-              >
-                <i class="fa fa-plus"></i> Add New
-              </button>
-              <button
-                type="button"
-                class="btn addbutton add-new"
-               
-               
-              >
-                <i class="fa fa-plus"></i> Add New
-              </button>
-            </div>
-          </div>
-        
-      
-    </div>
-      <div class="row">
-       
-        <div class="col-sm-12 align-div">
-         
-        </div>
-      </div>
-  <!-- </div> -->
-   
-  
-    </div>
-    
-    <div class="modal fade" id="modal-class">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button
-              type="button"
-              class="close"
-              data-dismiss="modal"
-              aria-label="Close"
-            >
-              <span aria-hidden="true">&times;</span>
-            </button>
-            <h4 class="modal-title">Save</h4>
-          </div>
-          <div class="modal-body">
-            <div class="row" style="margin-bottom: 8px">
-              <div class="col-sm-4">
-                <label>Segment Code</label>
-              </div>
-              <div class="col-sm-6">
-                <input
-                  type="number"
-                  class="form-control"
-                  placeholder="Segment Code"
-           
-                />
-              </div>
-            </div>
-            <div class="row" style="margin-bottom: 8px">
-              <div class="col-sm-4">
-                <label>Segment Name</label>
-              </div>
-              <div class="col-sm-6">
-                <input
-                  type="text"
-                  class="form-control"
-                  placeholder="Segment Name"
-                 
-                />
-              </div>
-            </div>
-          </div>
-          <div class="modal-footer">
-            <button
-              type="button"
-              class="btn btn-default pull-left"
-              #modalCloseButton
-              data-dismiss="modal"
-            >
-              Close
-            </button>
-            <button type="button" class="btn btn-primary" >
-              Save changes
-            </button>
-          </div>
-        </div>
-        <!-- /.modal-content -->
-      </div>
-      <!-- /.modal-dialog -->
-    </div>
-    
-    <div class="modal fade" id="modal-confirm-bank">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button
-              type="button"
-              class="close"
-              data-dismiss="modal"
-              aria-label="Close"
-            >
-              <span aria-hidden="true">&times;</span>
-            </button>
-            <h4 class="modal-title">Confirmation</h4>
-          </div>
-          <div class="modal-body">
-            <p>Are you sure you want to delete this PhysicalPurchaseForm &hellip;</p>
-          </div>
-          <div class="modal-footer">
-            <button
-              type="button"
-              class="btn btn-default pull-left"
-              #modalConfirmCloseButton
-              data-dismiss="modal"
-            >
-              Close
-            </button>
-            <button
-              type="button"
-              class="btn btn-primary"
-           
-            >
-              Delete
-            </button>
-          </div>
-        </div>
-        <!-- /.modal-content -->
-      </div>
-      <!-- /.modal-dialog -->
-    </div>
-    
-  
-  
-  
-  
+<ng-template
+	#customDay
+	let-date
+	let-currentMonth="currentMonth"
+	let-selected="selected"
+	let-disabled="disabled"
+	let-focused="focused"
+>
+	<span
+		class="custom-day"
+		[class.weekend]="isWeekend(date)"
+		[class.focused]="focused"
+		[class.bg-primary]="selected"
+		[class.hidden]="date.month !== currentMonth"
+		[class.text-muted]="disabled"
+	>
+		{{ date.day }}
+	</span>
+</ng-template>
