--- a/src/app/panel/panel.component.html
+++ b/src/app/panel/panel.component.html
@@ -15,7 +15,7 @@
          <a href="#"><i class="fa fa-ban"></i><span>Ban Customers</span></a> 
          <a href="#"><i class="fa fa-cog"></i><span>Setting</span></a>
           <a href="#" class="Logout"><span>Logout</span></a>
-    </div>
+    </div> 
 
-    <!-- here we display the data of other components in the class data and router-outlet tag -->
+     here we display the data of other components in the class data and router-outlet tag
     <div class="data"> <router-outlet></router-outlet> </div>
